--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -24,7 +24,7 @@
   }
 
   &__title {
-    color: $mainBlue;
+    color: $mainBluee;
     text-align: center;
     font-size: 1.5rem;
     font-weight: 500;
