Inicio concluído -Responsível

--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,6 +1,6 @@
 .large-hero {
-  border-bottom: 10px solid $mainBlue;
   position: relative;
+  opacity: .9;
 
   &__image {
     display: block;
@@ -47,7 +47,7 @@
   &__description {
     color: #FFF;
     font-size: 1.1rem;
-    font-weight: 100;
+    font-weight: 250;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, .1);
     max-width: 30rem;
     margin-left: auto;
