--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -26,7 +26,7 @@
   }
 
   &--testimonials {
-    background-color: #e0e6ef;
+    background-color: #e6e6ff;
 
     @mixin atLarge {
       &.lazyloaded {
