--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -31,8 +31,8 @@
     transform: translateX(-50%) scale(.8);
     transition: transform .3s ease-out;
     transform-origin: 50% 0;
-    background-color: #FFF;
-    padding: 25px 36px;
+    background-color: rgba($mainBluee, .55);
+    padding: 24.5px 36px;
 
     @mixin atMedium {
       left: auto;
@@ -40,6 +40,8 @@
 
       .site-header--dark & {
         transform: scale(.56);
+        transition: transform .3s ease-out;
+        background-color: rgba(23, 51, 72, .3);
       }
     }
   }
@@ -55,6 +57,7 @@
     z-index: 10;
     top: 10px;
     right: 10px;
+
 
     &::before {
       content: "";
