--- a/app/assets/styles/modules/_social-icons.css
+++ b/app/assets/styles/modules/_social-icons.css
@@ -1,17 +1,16 @@
 .social-icons {
-  text-align: center;
-
   &__icon {
-    background-color: $mainOrange;
+    background-color: $mainBlue;
     display: inline-block;
     margin: 0 5px 5px 5px;
-    width: 33%;
-    height: 72px;
+    width: 23%;
+    height: 42px;
     position: relative;
+    left: -35%;
 
     @mixin atSmall {
       width: 72px;
-      margin: 0 5px;
+      margin: 0 5px; 
     }
 
     .icon {
