Alterações na tipologia, imagens de perfil, imagem principal e rodapé

--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -1,5 +1,5 @@
 .site-footer {
-  background-color: $mainBlue;
+  background-color: rgba(23, 51, 72);
   color: #FFF;
   padding: .5rem 0;
   text-align: center;
