--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,6 +1,6 @@
 .large-hero {
   position: relative;
-  opacity: .9;
+  opacity: 1;
 
   &__image {
     display: block;
@@ -21,25 +21,27 @@
   }
 
   &__title {
-    font-weight: 300;
-    color: $mainBlue;
+    font-style: bold;
+    font-style: italic;
+    color: white;
     margin: 0;
     font-size: 2.4rem;
   
     @mixin atSmall {
-      font-size: 4.8rem;
+      font-size: 4.7rem;
     }
 
   }
 
   &__subtitle {
-    font-weight: 300;
-    color: $mainBlue;
+    font-style: italic;
+    font-style: bold;
+    color: white;
     font-size: 1.5rem;
     margin: 0;
 
     @mixin atSmall {
-      font-size: 2.9rem;
+      font-size: 2.0rem;
     }
 
   }
